🍪 feat(kitchen-sink): add Cookies API
